radarr/01-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: radarr-service
  namespace: p2p
spec:
  selector:
    app: radarr
  ports:
  - port: 7878
    targetPort: 7878
    name: web
    protocol: TCP
  type: ClusterIP
