radarr/02-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingress
  namespace: p2p
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - match: Host(`radarr.${DOMAIN}`)
    kind: Rule
    services:
    - kind: Service
      name: radarr-service
      port: web
